--- a/app/src/main/res/layout/activity_play_detail.xml
+++ b/app/src/main/res/layout/activity_play_detail.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.slg.android.listenbook.biz.home.bookcity.PlayDetailActivity">
+    tools:context="com.slg.android.listenbook.biz.bookcity.PlayDetailActivity">
 
     <include layout="@layout/common_title_bar"/>
 
